@@ -3446,8 +3446,6 @@ END
 
 IDD_OPTIONS_EDITOR DLGINIT
 BEGIN
-    IDC_OPTIONS_EDITOR_WORDWRAP_STYLE, 0x403, 13, 0
-0x654b, 0x6e69, 0x5520, 0x626d, 0x7572, 0x6863, "\000" 
     IDC_OPTIONS_EDITOR_WORDWRAP_STYLE, 0x403, 23, 0
 0x6d55, 0x7262, 0x6375, 0x2068, 0x6d61, 0x4620, 0x6e65, 0x7473, 0x7265, 
 0x6172, 0x646e, "\000" 
@@ -7494,8 +7492,6 @@ END
 
 IDD_OPTIONS_EDITOR DLGINIT
 BEGIN
-    IDC_OPTIONS_EDITOR_WORDWRAP_STYLE, 0x403, 13, 0
-0x6f4e, 0x7720, 0x726f, 0x2064, 0x7277, 0x7061, "\000" 
     IDC_OPTIONS_EDITOR_WORDWRAP_STYLE, 0x403, 22, 0
 0x7257, 0x7061, 0x6120, 0x2074, 0x6977, 0x646e, 0x776f, 0x6220, 0x726f, 
 0x6564, 0x0072, 
